Fix / Cleanup / WiP

--- a/GenX.Client/View/LoadingWindow.xaml
+++ b/GenX.Client/View/LoadingWindow.xaml
@@ -8,11 +8,12 @@
     Width="480"
     Height="200"
     ui:ThemeManager.IsThemeAware="True"
+    ui:TitleBar.CloseButtonAvailability="Collapsed"
     ui:TitleBar.Height="36"
     ui:WindowHelper.ApplyNoise="True"
     ui:WindowHelper.CornerStyle="DoNotRound"
     ui:WindowHelper.SystemBackdropType="Acrylic11"
-    ui:WindowHelper.UseModernWindowStyle="True" ui:TitleBar.CloseButtonAvailability="Collapsed"
+    ui:WindowHelper.UseModernWindowStyle="True"
     DataContext="{Binding LoadingWindow, Source={StaticResource Locator}}"
     Loaded="OnLoaded"
     ResizeMode="NoResize"
