--- a/GenX.Client/View/LoadingWindow.xaml
+++ b/GenX.Client/View/LoadingWindow.xaml
@@ -5,11 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.inkore.net/lib/ui/wpf/modern"
-    Width="480"
-    Height="200"
+    Width="450"
+    Height="110"
     ui:ThemeManager.IsThemeAware="True"
     ui:TitleBar.CloseButtonAvailability="Collapsed"
-    ui:TitleBar.Height="36"
+    ui:TitleBar.Height="5"
     ui:WindowHelper.ApplyNoise="True"
     ui:WindowHelper.CornerStyle="DoNotRound"
     ui:WindowHelper.SystemBackdropType="Acrylic11"
@@ -19,5 +19,19 @@
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <TextBlock
+            Margin="30,5"
+            VerticalAlignment="Center"
+            Text="{Tr LoadingAccount}" />
+        <ui:ProgressRing
+            Grid.Column="1"
+            Margin="20"
+            IsActive="True"
+            IsIndeterminate="True" />
+    </Grid>
 </Window>
