--- a/GenX.Client/View/MainWindow.xaml
+++ b/GenX.Client/View/MainWindow.xaml
@@ -4,10 +4,74 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    xmlns:ui="http://schemas.inkore.net/lib/ui/wpf/modern"
     Width="800"
     Height="450"
+    ui:ThemeManager.IsThemeAware="True"
+    ui:TitleBar.BackRequested="OnTitleBarBackRequested"
+    ui:TitleBar.Height="36"
+    ui:TitleBar.IsBackButtonVisible="True"
+    ui:TitleBar.IsBackEnabled="True"
+    ui:TitleBar.IsIconVisible="False"
+    ui:WindowHelper.ApplyNoise="True"
+    ui:WindowHelper.CornerStyle="DoNotRound"
+    ui:WindowHelper.SystemBackdropType="Acrylic11"
+    ui:WindowHelper.UseModernWindowStyle="True"
     DataContext="{Binding MainWindow, Source={StaticResource Locator}}"
+    ResizeMode="CanResizeWithGrip"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <ui:NavigationView
+            x:Name="NavigationView"
+            CompactModeThresholdWidth="100"
+            ExpandedModeThresholdWidth="800"
+            IsBackButtonVisible="Collapsed"
+            IsBackEnabled="False"
+            OpenPaneLength="190"
+            PaneDisplayMode="Auto"
+            SelectionChanged="OnSelectionChanged">
+            <FrameworkElement.Resources>
+                <SolidColorBrush x:Key="{x:Static ui:ThemeKeys.NavigationViewContentBackgroundKey}" Color="Transparent" />
+                <SolidColorBrush x:Key="{x:Static ui:ThemeKeys.ExpanderHeaderBorderBrushKey}" Color="Transparent" />
+                <Thickness x:Key="NavigationViewContentGridBorderThickness">0,0,0,0</Thickness>
+            </FrameworkElement.Resources>
+            <ui:NavigationView.MenuItems>
+                <ui:NavigationViewItem Content="Home" Tag="HomePage">
+                    <ui:NavigationViewItem.Icon>
+                        <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.Home}" />
+                    </ui:NavigationViewItem.Icon>
+                </ui:NavigationViewItem>
+
+                <ui:NavigationViewItem Content="Apps" Tag="AppsPage">
+                    <ui:NavigationViewItem.Icon>
+                        <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.OEM}" />
+                    </ui:NavigationViewItem.Icon>
+                </ui:NavigationViewItem>
+
+                <ui:NavigationViewItem Content="Games" Tag="GamesPage">
+                    <ui:NavigationViewItem.Icon>
+                        <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.Game}" />
+                    </ui:NavigationViewItem.Icon>
+                </ui:NavigationViewItem>
+
+
+            </ui:NavigationView.MenuItems>
+            <ui:NavigationView.FooterMenuItems>
+
+                <ui:NavigationViewItem Content="Settings" Tag="SettingsPage">
+                    <ui:NavigationViewItem.Icon>
+                        <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.Settings}" />
+                    </ui:NavigationViewItem.Icon>
+                </ui:NavigationViewItem>
+                <ui:NavigationViewItem Content="About" Tag="AboutPage">
+                    <ui:NavigationViewItem.Icon>
+                        <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.Info}" />
+                    </ui:NavigationViewItem.Icon>
+                </ui:NavigationViewItem>
+
+            </ui:NavigationView.FooterMenuItems>
+            <ui:Frame x:Name="ContentFrame" Navigated="OnNavigated" />
+
+        </ui:NavigationView>
+    </Grid>
 </Window>
