--- a/GenX.Client/Pages/SettingsContent/SettingsOther.xaml
+++ b/GenX.Client/Pages/SettingsContent/SettingsOther.xaml
@@ -1,15 +1,13 @@
 ﻿<Page
-    x:Class="GenX.Client.Pages.GamesPage"
+    x:Class="GenX.Client.Pages.SettingsContent.SettingsOther"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="GamesPage"
+    Title="SettingsOther"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid>
-        <TextBlock Text="GAME" />
-    </Grid>
+    <Grid />
 </Page>
