--- a/GenX.Client/View/LoginWindow.xaml
+++ b/GenX.Client/View/LoginWindow.xaml
@@ -74,8 +74,7 @@
             ui:ControlHelper.PlaceholderText="{Tr PasswordPlaceholder}">
             <b:Interaction.Triggers>
                 <b:EventTrigger EventName="PasswordChanged">
-                    <b:InvokeCommandAction Command="{Binding PasswordChangedCommand}"
-                                           CommandParameter="{Binding ElementName=Password}" />
+                    <b:InvokeCommandAction Command="{Binding PasswordChangedCommand}" CommandParameter="{Binding ElementName=Password}" />
                 </b:EventTrigger>
             </b:Interaction.Triggers>
         </PasswordBox>
