--- a/GenX.Client/App.xaml
+++ b/GenX.Client/App.xaml
@@ -25,8 +25,19 @@
 
             </ResourceDictionary.MergedDictionaries>
             <viewModels:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+
+            <Thickness x:Key="NavigationViewHeaderMargin">20,10,0,0</Thickness>
+
             <SolidColorBrush x:Key="ListViewItemBackground" Color="{StaticResource LayerFillColorAlt}" />
             <!--<SolidColorBrush x:Key="{x:Static ui:ThemeKeys.ApplicationPageBackgroundThemeBrushKey}" Color="#2B2B2B"/>-->
+
+            <Style x:Key="SettingsTitleStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Foreground" Value="{DynamicResource TextControlHeaderForeground}" />
+            </Style>
+
+            <Thickness x:Key="AppBarButtonContentViewboxCollapsedMargin">10,10,10,10</Thickness>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
