--- a/GenX.Client/View/MainWindow.xaml
+++ b/GenX.Client/View/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GenX.Client.ViewModels.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:p="clr-namespace:GenX.Client.Properties"
     xmlns:ui="http://schemas.inkore.net/lib/ui/wpf/modern"
@@ -12,7 +13,7 @@
     MinHeight="600"
     ui:ThemeManager.IsThemeAware="True"
     ui:TitleBar.BackRequested="OnTitleBarBackRequested"
-    ui:TitleBar.Height="36"
+    ui:TitleBar.Height="46"
     ui:TitleBar.IsBackButtonVisible="True"
     ui:TitleBar.IsBackEnabled="True"
     ui:TitleBar.IsIconVisible="False"
@@ -26,21 +27,61 @@
     Top="{Binding Top, Mode=TwoWay, Source={x:Static p:Settings.Default}}"
     mc:Ignorable="d">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid
+            Grid.Row="0"
+            Margin="0,-60,200,0"
+            HorizontalAlignment="Right">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="15,8,5,5"
+                FontSize="46"
+                Foreground="{DynamicResource {x:Static ui:ThemeKeys.SystemControlForegroundAccentBrushKey}}"
+                Text="{Binding DateNumber}" />
+            <StackPanel
+                Grid.Column="1"
+                Margin="5,20,5,12"
+                VerticalAlignment="Top">
+                <TextBlock FontSize="16" Text="{Binding DateMonth}" />
+                <TextBlock FontSize="16" Text="{Binding DateDay}" />
+            </StackPanel>
+            <TextBlock
+                Grid.Column="2"
+                Margin="5,8,5,5"
+                FontSize="46"
+                Foreground="{DynamicResource {x:Static ui:ThemeKeys.SystemControlForegroundAccentBrushKey}}"
+                Text="{Binding ClockTime}" />
+        </Grid>
         <ui:NavigationView
             x:Name="NavigationView"
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            AlwaysShowHeader="True"
             CompactModeThresholdWidth="100"
             ExpandedModeThresholdWidth="800"
+            Header=" "
             IsBackButtonVisible="Collapsed"
             IsBackEnabled="False"
             OpenPaneLength="190"
             PaneDisplayMode="Auto"
             SelectionChanged="OnSelectionChanged">
+
             <FrameworkElement.Resources>
                 <SolidColorBrush x:Key="{x:Static ui:ThemeKeys.NavigationViewContentBackgroundKey}" Color="Transparent" />
                 <SolidColorBrush x:Key="{x:Static ui:ThemeKeys.ExpanderHeaderBorderBrushKey}" Color="Transparent" />
                 <Thickness x:Key="NavigationViewContentGridBorderThickness">0,0,0,0</Thickness>
             </FrameworkElement.Resources>
             <ui:NavigationView.MenuItems>
+
                 <ui:NavigationViewItem Content="{Tr MainMenuHome}" Tag="HomePage">
                     <ui:NavigationViewItem.Icon>
                         <ui:FontIcon Icon="{x:Static ui:SegoeFluentIcons.Home}" />
@@ -71,9 +112,37 @@
             </ui:NavigationView.FooterMenuItems>
             <ui:Frame
                 x:Name="ContentFrame"
-                Margin="20"
+                Margin="20,30,20,20"
                 Navigated="OnNavigated" />
 
         </ui:NavigationView>
+        <ItemsControl
+            Grid.Row="1"
+            Margin="10"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            ItemsSource="{Binding Alerts}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel
+                        VerticalAlignment="Bottom"
+                        IsItemsHost="True"
+                        Orientation="Vertical" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:AlertViewModel}">
+                    <ui:InfoBar
+                        Title="{Binding Title}"
+                        Margin="0,5,0,0"
+                        IsClosable="True"
+                        IsIconVisible="True"
+                        IsOpen="{Binding IsOpen}"
+                        Message="{Binding Message}"
+                        Severity="{Binding Severity}" />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
 </Window>
